force-app/main/default/objects/Quote/fields/Analysis_Tool__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Tool__c</fullName>
    <label>Analysis Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate &amp; Term Refi</fullName>
            </value>
            <value>
                <fullName>Loan Program Options</fullName>
            </value>
            <value>
                <fullName>Rate &amp; Fee Options</fullName>
            </value>
            <value>
                <fullName>Principle Reduction ROI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>