force-app/main/default/objects/Quote/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <label>Current_Interest_Rate</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>