force-app/main/default/objects/Quote/fields/Current_Loan_Amt__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Amt__c</fullName>
    <label>Current Loan Amt</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>