force-app/main/default/objects/Quote/fields/Current_Loan_Balance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Balance_Remaining__c</fullName>
    <label>Current Loan Balance Remaining</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>