force-app/main/default/objects/Quote/fields/Current_Loan_First_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_First_Payment__c</fullName>
    <label>Current Loan First Payment</label>
    <type>Date</type>
</CustomField>