force-app/main/default/objects/Quote/fields/Current_Loan_Last_Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Last_Payment_Made__c</fullName>
    <label>Current Loan Last Payment Made</label>
    <type>Date</type>
</CustomField>