force-app/main/default/objects/Quote/fields/Current_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Term__c</fullName>
    <label>Current Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>