force-app/main/default/objects/Quote/fields/Current_Pace__c.field-meta.xml
<CustomField>
    <fullName>Current_Pace__c</fullName>
    <formula>Current_Loan_Payments_Remaining__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Pace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>