force-app/main/default/objects/Quote/fields/Early_Payoff_Savings__c.field-meta.xml
<CustomField>
    <fullName>Early_Payoff_Savings__c</fullName>
    <formula>(Current_Loan_Monthly_Payment__c * Current_Loan_Term__c) -  (Current_Loan_Monthly_Payment__c * (New_Loan_Term__c - Same_Payment_Term_Reduction__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Payoff Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>