force-app/main/default/objects/Quote/fields/New_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Amount__c</fullName>
    <label>New Loan Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>