force-app/main/default/objects/Quote/fields/New_Loan_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Interest_Rate__c</fullName>
    <label>New Loan Interest Rate</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>