force-app/main/default/objects/Quote/fields/New_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>New_Loan_Term__c</fullName>
    <label>New Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>