force-app/main/default/objects/Quote/fields/Payoff_Term_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Payoff_Term_Reduction__c</fullName>
    <formula>99999</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payoff Term Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>