force-app/main/default/objects/Quote/fields/Preapproval_Letter_Body__c.field-meta.xml
<CustomField>
    <fullName>Preapproval_Letter_Body__c</fullName>
    <label>Preapproval Letter Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>