force-app/main/default/objects/Quote/fields/QuoteNo__c.field-meta.xml
<CustomField>
    <fullName>QuoteNo__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuoteNo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>