force-app/main/default/objects/Quote/fields/Same_Payment_Term_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Same_Payment_Term_Reduction__c</fullName>
    <label>Same Payment Term Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>