force-app/main/default/objects/Quote/fields/X10_Yr_Treasury_Yield__c.field-meta.xml
<CustomField>
    <fullName>X10_Yr_Treasury_Yield__c</fullName>
    <label>10 Yr Treasury Yield</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>